WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206125
[WebCore] Fix crash in module loader due to change in fragment reservation
https://bugs.webkit.org/show_bug.cgi?id=206125
Summary
[WebCore] Fix crash in module loader due to change in fragment reservation
Yusuke Suzuki
Reported
2020-01-10 21:43:54 PST
At some point, CachedResource::url() starts returning URL without fragment. This breaks invariant in module loader and one of WPT test is crashing.
Attachments
Patch
(5.96 KB, patch)
2020-01-10 21:46 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(6.10 KB, patch)
2020-01-10 21:53 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(7.90 KB, patch)
2020-01-10 22:27 PST
,
Yusuke Suzuki
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-01-10 21:46:30 PST
Created
attachment 387422
[details]
Patch
Yusuke Suzuki
Comment 2
2020-01-10 21:53:16 PST
Created
attachment 387423
[details]
Patch
Yusuke Suzuki
Comment 3
2020-01-10 21:56:45 PST
Maybe, this?
https://bugs.webkit.org/show_bug.cgi?id=159705
Yusuke Suzuki
Comment 4
2020-01-10 22:27:28 PST
Created
attachment 387426
[details]
Patch
Yusuke Suzuki
Comment 5
2020-01-11 17:25:29 PST
Committed
r254408
: <
https://trac.webkit.org/changeset/254408
>
Radar WebKit Bug Importer
Comment 6
2020-01-11 17:26:14 PST
<
rdar://problem/58507472
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug